Improved patchy dimer discretization

--- a/examples/models/patchyParticlesAngular.ipynb
+++ b/examples/models/patchyParticlesAngular.ipynb
@@ -117,8 +117,8 @@
     "strength = 160 #200.0\n",
     "angularStrength = 20 #200.0\n",
     "angleDiff = 3*np.pi/5.0\n",
-    "patch1 = np.array([1.,0.,0.])\n",
-    "patch2 = np.array([np.cos(angleDiff),np.sin(angleDiff),0.])\n",
+    "patch1 = np.array([np.cos(angleDiff/2),np.sin(angleDiff/2),0.])\n",
+    "patch2 = np.array([np.cos(-angleDiff/2),np.sin(-angleDiff/2),0.])\n",
     "#patch2 = np.array([-1.,0.,0.])\n",
     "patchesCoordinates = [patch1, patch2]\n",
     "potentialPatchyParticleAngular = patchyParticleAngular(sigma, strength, angularStrength, patchesCoordinates)\n",
@@ -133,11 +133,11 @@
    "source": [
     "# Save Symmetry quaternion(s) in particle (structural symmetry of certain rotations encoded in a quaternion) \n",
     "# Just proof of concept, not really used in this example\n",
-    "rotationAxisAngle = np.pi*np.array([np.cos(0.5*angleDiff),np.sin(0.5*angleDiff),0.]) # 180 deree rotation along axis\n",
-    "symQuaternion = quats.angle2quat(rotationAxisAngle)\n",
-    "symmetryQuaternionsList = [symQuaternion]\n",
-    "for i in range(numparticles):\n",
-    "    partlist[i].setSymmetryQuaternions(len(symmetryQuaternionsList ), symmetryQuaternionsList)"
+    "#rotationAxisAngle = np.pi*np.array([np.cos(0.5*angleDiff),np.sin(0.5*angleDiff),0.]) # 180 deree rotation along axis\n",
+    "#symQuaternion = quats.angle2quat(rotationAxisAngle)\n",
+    "#symmetryQuaternionsList = [symQuaternion]\n",
+    "#for i in range(numparticles):\n",
+    "#    partlist[i].setSymmetryQuaternions(len(symmetryQuaternionsList ), symmetryQuaternionsList)"
    ]
   },
   {
@@ -147,8 +147,8 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 10000000\n",
-    "stride = 2500 #1000\n",
+    "timesteps = 20000000\n",
+    "stride = 250 #1000\n",
     "datafile  = open('../../data/vmd/patchyParticlesAngular.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
@@ -172,6 +172,13 @@
     "                                     tclfname = \"../../data/vmd/patchyParticlesAngular2vmd.tcl\")\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
