--- a/examples/readDimerData.ipynb
+++ b/examples/readDimerData.ipynb
@@ -12,7 +12,10 @@
     "import matplotlib.pyplot as plt\n",
     "import msmrd2.tools as msmrdtls\n",
     "import msmrd2.analysis as msmrdals\n",
-    "from msmrd2 import msmrdMarkovModel"
+    "from msmrd2 import msmrdMarkovModel\n",
+    "import pyemma\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pyemma.plots as mplt"
    ]
   },
   {
@@ -21,12 +24,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define useful parameters\n",
+    "# Define useful parametersdtrajs\n",
     "dt = 0.00001\n",
-    "timesteps = 20000000\n",
-    "stride = 2500\n",
+    "timesteps = 20000000 # 2000000\n",
+    "stride = 250 #2500\n",
     "maxentries = int(timesteps/stride)\n",
-    "fnamebase = '../data/dimer/simDimer'\n",
+    "#fnamebase = '../data/dimer/old/simDimer'\n",
+    "fnamebase = '../data/dimer/simDimer_t2.00E+07_s250_'\n",
     "nfiles = 10"
    ]
   },
@@ -40,7 +44,8 @@
     "trajs = []\n",
     "for i in range(nfiles):\n",
     "    traj = msmrdals.loadTrajectory(fnamebase, i)\n",
-    "    trajs.append(traj)"
+    "    trajs.append(traj)\n",
+    "    print(\"File \", i+1, \" of \", nfiles, \" done.\", end=\"\\r\")"
    ]
   },
   {
@@ -51,7 +56,7 @@
    "source": [
     "# Plot relative position\n",
     "diffpos =[]\n",
-    "file=0\n",
+    "file=2\n",
     "for entry in range(maxentries):\n",
     "    time = trajs[file][entry][0]*dt\n",
     "    part1pos = np.array(trajs[file][2*entry][1:4])\n",
@@ -67,15 +72,22 @@
    "outputs": [],
    "source": [
     "# Plot relative orientation\n",
-    "difforient =[]\n",
+    "difforient = []\n",
+    "difforientquat = []\n",
     "for entry in range(int(maxentries)):\n",
     "    time = trajs[file][entry][0]*dt\n",
     "    part1orient = np.array(trajs[file][2*entry][4:8])\n",
     "    part2orient = np.array(trajs[file][2*entry+1][4:8])\n",
     "    relorient = msmrdtls.quaternions.relativeOrientation(part1orient, part2orient)\n",
     "    phi = msmrdtls.quaternions.quat2angle(relorient)\n",
+    "    quatdist = msmrdtls.quaternionDistance(np.array([1,0,0,0]), relorient)\n",
     "    difforient.append(np.linalg.norm(phi))\n",
-    "plt.plot(difforient)"
+    "    difforientquat.append(np.linalg.norm(quatdist))\n",
+    "plt.plot(difforientquat, alpha = 0.5) #blue\n",
+    "plt.plot(np.array(difforient)/(2*np.pi), alpha = 0.5) #orange\n",
+    "#plt.plot([0,80000], [0.5, 0.5], '--')\n",
+    "#plt.plot([0,80000], [0.7, 0.7], '--')\n",
+    "#plt.plot([0,80000], [0.3, 0.3], '--')"
    ]
   },
   {
@@ -84,10 +96,166 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load discrete trajectories\n",
     "dtrajs = []\n",
     "for i in range(nfiles):\n",
     "    dtraj = msmrdals.loadDiscreteTrajectory(fnamebase, i)\n",
-    "    dtrajs.append(dtraj)"
+    "    dtrajs.append(dtraj)    \n",
+    "    print(\"File \", i+1, \" of \", nfiles, \" done.\", end=\"\\r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rateDict = msmrdals.extractRatesMSM(dtrajs, 200, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rateDict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slicedDtrajs = msmrdals.splitDiscreteTrajs(dtrajs,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slicedDtrajs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maxlagtime = 200\n",
+    "lagtime = 20\n",
+    "mymsm = pyemma.msm.estimate_markov_model(slicedDtrajs,lagtime,reversible=False)\n",
+    "mymsm2 = pyemma.msm.estimate_markov_model(slicedDtrajs,2*lagtime,reversible=False)\n",
+    "mymsm4 = pyemma.msm.estimate_markov_model(slicedDtrajs,4*lagtime,reversible=False)\n",
+    "mymsm8 = pyemma.msm.estimate_markov_model(slicedDtrajs,8*lagtime,reversible=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "activeset = mymsm.active_set\n",
+    "activeset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.where(activeset == 66)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "its = pyemma.msm.its(dtrajs, lags = maxlagtime)\n",
+    "mplt.plot_implied_timescales(its, ylog=True, units='steps', linewidth=2, dt=1)\n",
+    "plt.ylabel(r\"timescale/steps\", fontsize = 24)\n",
+    "plt.xlabel(r\"lag time/steps\", fontsize = 24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(mymsm.mfpt(3,0), mymsm2.mfpt(0,1), mymsm4.mfpt(0,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from msmtools.analysis import mfpt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(mfpt(mymsm.transition_matrix, origin = 4, target = 0, tau = lagtime),\n",
+    "      mfpt(mymsm2.transition_matrix, origin = 4, target = 0, tau = lagtime*2))\n",
+    "      #mfpt(mymsm4.transition_matrix, origin = 4, target = 0, tau = lagtime*4),\n",
+    "      #mfpt(mymsm4.transition_matrix, origin = 4, target = 0, tau = lagtime*8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "origin = 1\n",
+    "target = 0\n",
+    "print(-np.log(1.0 - mymsm.transition_matrix[origin][target])/lagtime,\n",
+    "      -np.log(1.0 - mymsm2.transition_matrix[origin][target])/(2*lagtime),\n",
+    "      -np.log(1.0 - mymsm4.transition_matrix[origin][target])/(4*lagtime),\n",
+    "      -np.log(1.0 - mymsm8.transition_matrix[origin][target])/(8*lagtime))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mytpt = pyemma.msm.tpt(mymsm,[0],[1])\n",
+    "mytpt.mfpt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1/(dt*mymsm.mfpt(0,1)*200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mytpt = pyemma.msm.tpt(mymsm,[15],[10])\n",
+    "mytpt.rate/dt"
    ]
   },
   {
@@ -99,17 +267,8 @@
     "# Create distionaries to keep track of specific events. Needed to calculate rates\n",
     "boundstates = 2\n",
     "orientations = 6\n",
-    "timeDict, eventDict = msmrdals.createStatesDictionaries(boundstates, orientations)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "dt = trajs[0][2][0] - trajs[0][0][0]\n",
-    "rateDict, timeDict, eventDict = msmrdals.extractRates(dtrajs, timeDict, eventDict)"
+    "rateDict, timeDict, eventDict = msmrdals.extractRates(dtrajs, boundstates, orientations)"
    ]
   },
   {
