Added periodicity support in trajectories

--- a/examples/models/patchyParticlesAngular.ipynb
+++ b/examples/models/patchyParticlesAngular.ipynb
@@ -24,7 +24,7 @@
     "# Define arbitrarily large list of rod-like particles\n",
     "np.random.seed(seed=1) # seed 1 good for pentamer \n",
     "numparticles = 2\n",
-    "boxsize = 3\n",
+    "boxsize = 4\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "pyPartlist = [] \n",
@@ -101,9 +101,10 @@
    "source": [
     "# Define boundary (choose either spherical or box)\n",
     "# sphericalBoundary = msmrd2.sphere(radius,'reflective')\n",
-    "#boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'reflective')\n",
-    "sphereBoundary = msmrd2.sphere(boxsize,'reflective')\n",
-    "integrator.setBoundary(sphereBoundary)"
+    "boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'periodic')\n",
+    "integrator.setBoundary(boxBoundary)\n",
+    "#sphereBoundary = msmrd2.sphere(boxsize,'reflective')\n",
+    "#integrator.setBoundary(sphereBoundary)"
    ]
   },
   {
