--- a/examples/readDimerData.ipynb
+++ b/examples/readDimerData.ipynb
@@ -147,11 +147,11 @@
    "outputs": [],
    "source": [
     "maxlagtime = 200\n",
-    "lagtime = 20\n",
+    "lagtime = 300\n",
     "mymsm = pyemma.msm.estimate_markov_model(slicedDtrajs,lagtime,reversible=False)\n",
     "mymsm2 = pyemma.msm.estimate_markov_model(slicedDtrajs,2*lagtime,reversible=False)\n",
-    "mymsm4 = pyemma.msm.estimate_markov_model(slicedDtrajs,4*lagtime,reversible=False)\n",
-    "mymsm8 = pyemma.msm.estimate_markov_model(slicedDtrajs,8*lagtime,reversible=False)"
+    "mymsm4 = pyemma.msm.estimate_markov_model(slicedDtrajs,2*lagtime,reversible=False)\n",
+    "mymsm8 = pyemma.msm.estimate_markov_model(slicedDtrajs,2*lagtime,reversible=False)"
    ]
   },
   {
@@ -161,16 +161,8 @@
    "outputs": [],
    "source": [
     "activeset = mymsm.active_set\n",
+    "# np.where(activeset == 66)\n",
     "activeset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.where(activeset == 66)"
    ]
   },
   {
@@ -183,6 +175,15 @@
     "mplt.plot_implied_timescales(its, ylog=True, units='steps', linewidth=2, dt=1)\n",
     "plt.ylabel(r\"timescale/steps\", fontsize = 24)\n",
     "plt.xlabel(r\"lag time/steps\", fontsize = 24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mymsm.eigenvectors_left()[7]"
    ]
   },
   {
@@ -210,9 +211,9 @@
    "outputs": [],
    "source": [
     "print(mfpt(mymsm.transition_matrix, origin = 4, target = 0, tau = lagtime),\n",
-    "      mfpt(mymsm2.transition_matrix, origin = 4, target = 0, tau = lagtime*2))\n",
-    "      #mfpt(mymsm4.transition_matrix, origin = 4, target = 0, tau = lagtime*4),\n",
-    "      #mfpt(mymsm4.transition_matrix, origin = 4, target = 0, tau = lagtime*8))"
+    "      mfpt(mymsm2.transition_matrix, origin = 4, target = 0, tau = lagtime*2),\n",
+    "      mfpt(mymsm4.transition_matrix, origin = 4, target = 0, tau = lagtime*4),\n",
+    "      mfpt(mymsm4.transition_matrix, origin = 4, target = 0, tau = lagtime*8))"
    ]
   },
   {
@@ -266,7 +267,7 @@
    "source": [
     "# Create distionaries to keep track of specific events. Needed to calculate rates\n",
     "boundstates = 2\n",
-    "orientations = 6\n",
+    "orientations = 7\n",
     "dt = trajs[0][2][0] - trajs[0][0][0]\n",
     "rateDict, timeDict, eventDict = msmrdals.extractRates(dtrajs, boundstates, orientations)"
    ]
