Potentials with periodic box fixed

--- a/examples/models/patchyParticles.ipynb
+++ b/examples/models/patchyParticles.ipynb
@@ -101,7 +101,8 @@
    "source": [
     "# Define boundary (choose either spherical or box)\n",
     "# sphericalBoundary = msmrd2.sphere(radius,'reflective')\n",
-    "#boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'reflective')\n",
+    "#boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'periodic')\n",
+    "#integrator.setBoundary(boxBoundary)\n",
     "sphereBoundary = msmrd2.sphere(boxsize,'reflective')\n",
     "integrator.setBoundary(sphereBoundary)"
    ]
@@ -150,7 +151,7 @@
     "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
-    "msmrdvis.generateTCL_patchyParticles(numparticles = numparticles, tclfname = \"../../data/vmd/patchyProteins2vmd.tcl\")\n",
+    "msmrdvis.generateTCL_patchyParticles(numparticles = numparticles, tclfname = \"../../data/vmd/patchyParticles2vmd.tcl\")\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
   },
