--- a/examples/models/patchyParticlesAngular.ipynb
+++ b/examples/models/patchyParticlesAngular.ipynb
@@ -24,7 +24,7 @@
     "# Define arbitrarily large list of rod-like particles\n",
     "np.random.seed(seed=1) # seed 1 good for pentamer \n",
     "numparticles = 2\n",
-    "boxsize = 4\n",
+    "boxsize = 3 \n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "pyPartlist = [] \n",
@@ -87,7 +87,7 @@
    "source": [
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
-    "seed = -1 #2 # Negative seed, uses random device as seed\n",
+    "seed = -1 # Negative seed, uses random device as seed\n",
     "bodytype = 'rigidbody'\n",
     "integrator = odLangevin(dt, seed, bodytype) \n",
     "#integrator.setKbT(0.1)"
@@ -148,7 +148,7 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 20000000\n",
+    "timesteps = 2000000 #20000000\n",
     "stride = 250 #1000\n",
     "datafile  = open('../../data/vmd/patchyParticlesAngular.xyz', 'w')\n",
     "for i in range(timesteps):\n",
