Fixed extractRates routine

--- a/examples/models/patchyParticlesAngular.ipynb
+++ b/examples/models/patchyParticlesAngular.ipynb
@@ -148,8 +148,8 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 2000000 #20000000\n",
-    "stride = 250 #1000\n",
+    "timesteps = 500000 #20000000\n",
+    "stride = 1000 #250 #1000\n",
     "datafile  = open('../../data/vmd/patchyParticlesAngular.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
