Moved Markov models to submodule

--- a/examples/models/MSM.ipynb
+++ b/examples/models/MSM.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import numpy as np\n",
     "import msmrd2\n",
-    "from msmrd2 import discreteTimeMarkovStateModel as msm"
+    "from msmrd2.markovModels import discreteTimeMarkovStateModel as msm"
    ]
   },
   {
