--- a/examples/models/dipole.ipynb
+++ b/examples/models/dipole.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import msmrd2\n",
     "import msmrd2.visualization as msmrdvis\n",
-    "from msmrd2 import continuousTimeMarkovStateModel as ctmsm\n",
+    "from msmrd2.markovModels import continuousTimeMarkovStateModel as ctmsm\n",
     "from msmrd2.potentials import dipole\n",
     "from msmrd2.integrators import overdampedLangevinMarkovSwitch as odLangevinMS"
    ]
