--- a/examples/models/odLangevinMarkovSwitch.ipynb
+++ b/examples/models/odLangevinMarkovSwitch.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import numpy as np\n",
     "import msmrd2\n",
-    "from msmrd2 import continuousTimeMarkovStateModel as ctmsm\n",
+    "from msmrd2.markovModels import continuousTimeMarkovStateModel as ctmsm\n",
     "from msmrd2.integrators import overdampedLangevinMarkovSwitch as odLangevinMS "
    ]
   },
