--- a/examples/models/patchyParticles.ipynb
+++ b/examples/models/patchyParticles.ipynb
@@ -204,11 +204,16 @@
    "outputs": [],
    "source": [
     "# Plot potential\n",
+    "plt.figure(figsize=(7,5))\n",
+    "plt.rcParams.update({'font.size': 22})\n",
     "plt.plot(dist, potantialAligned, label = \"aligned\")\n",
     "plt.plot(dist, potantialMisaligned, label = \"misaligned\")\n",
     "plt.plot(dist, 0*dist, '--k', lw=0.5)\n",
     "plt.legend()\n",
-    "plt.xlim([0,2*sigma])"
+    "plt.xlim([0,2*sigma])\n",
+    "plt.xlabel(\"Relative distance\")\n",
+    "plt.ylabel(\"Potential\")\n",
+    "plt.yticks([])\n"
    ]
   },
   {
