--- a/examples/models/patchyProteinsMarkovSwitch.ipynb
+++ b/examples/models/patchyProteinsMarkovSwitch.ipynb
@@ -11,7 +11,7 @@
     "import msmrd2\n",
     "import msmrd2.tools.quaternions as quats\n",
     "import msmrd2.visualization as msmrdvis\n",
-    "from msmrd2 import continuousTimeMarkovStateModel as ctmsm\n",
+    "from msmrd2.markovModels import continuousTimeMarkovStateModel as ctmsm\n",
     "from msmrd2.potentials import patchyProteinMarkovSwitch\n",
     "from msmrd2.integrators import overdampedLangevinMarkovSwitch as odLangevinMS"
    ]
