--- a/examples/readDimerData.ipynb
+++ b/examples/readDimerData.ipynb
@@ -25,13 +25,13 @@
    "outputs": [],
    "source": [
     "# Define useful parametersdtrajs\n",
-    "dt = 0.00001\n",
-    "timesteps = 20000000 # 2000000\n",
-    "stride = 250 #2500\n",
+    "dt = 0.000001\n",
+    "timesteps = 4000000 # 2000000\n",
+    "stride = 25 #2500\n",
     "maxentries = int(timesteps/stride)\n",
     "#fnamebase = '../data/dimer/old/simDimer'\n",
-    "fnamebase = '../data/dimer/simDimer_t2.00E+07_s250_'\n",
-    "nfiles = 10"
+    "fnamebase = '../data/dimer/simDimer_t4.00E+06_s25_'\n",
+    "nfiles = 200"
    ]
   },
   {
@@ -128,6 +128,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.where(dtrajs[3]<0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "slicedDtrajs = msmrdals.splitDiscreteTrajs(dtrajs,0)"
    ]
   },
@@ -137,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "slicedDtrajs"
+    "stitchedTrajs = msmrdals.stitchTrajs(slicedDtrajs, 500)"
    ]
   },
   {
@@ -146,12 +155,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maxlagtime = 200\n",
-    "lagtime = 300\n",
-    "mymsm = pyemma.msm.estimate_markov_model(slicedDtrajs,lagtime,reversible=False)\n",
-    "mymsm2 = pyemma.msm.estimate_markov_model(slicedDtrajs,2*lagtime,reversible=False)\n",
-    "mymsm4 = pyemma.msm.estimate_markov_model(slicedDtrajs,2*lagtime,reversible=False)\n",
-    "mymsm8 = pyemma.msm.estimate_markov_model(slicedDtrajs,2*lagtime,reversible=False)"
+    "lenlist = []\n",
+    "for traj in stitchedTrajs: #slicedDtrajs:\n",
+    "    lenlist.append(len(traj))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(np.log10(lenlist), bins=100);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maxlagtime = 500\n",
+    "lagtime = 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myMSMs = []\n",
+    "numMSMs = 10\n",
+    "for i in range(numMSMs):\n",
+    "    mymsm = pyemma.msm.estimate_markov_model(stitchedTrajs,(i+1)*lagtime,reversible=True)\n",
+    "    myMSMs.append(mymsm)\n",
+    "\n",
+    "mymsm = myMSMs[0]\n",
+    "#mymsm = pyemma.msm.estimate_markov_model(stitchedTrajs,lagtime,reversible=True)"
    ]
   },
   {
@@ -171,8 +212,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "its = pyemma.msm.its(dtrajs, lags = maxlagtime)\n",
-    "mplt.plot_implied_timescales(its, ylog=True, units='steps', linewidth=2, dt=1)\n",
+    "its = pyemma.msm.its(stitchedTrajs, lags = maxlagtime)\n",
+    "mplt.plot_implied_timescales(its, nits = 40, ylog=True, units='steps', linewidth=2, dt=1)\n",
     "plt.ylabel(r\"timescale/steps\", fontsize = 24)\n",
     "plt.xlabel(r\"lag time/steps\", fontsize = 24)"
    ]
@@ -183,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mymsm.eigenvectors_left()[7]"
+    "its.timescales[:,1]"
    ]
   },
   {
@@ -192,7 +233,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(mymsm.mfpt(3,0), mymsm2.mfpt(0,1), mymsm4.mfpt(0,1))"
+    "np.linalg.norm(mymsm.eigenvectors_right()[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in [8]:#range(10):\n",
+    "    normi = np.linalg.norm(mymsm.eigenvectors_left()[i])\n",
+    "    plt.plot(mymsm.eigenvectors_left()[i]/normi);\n",
+    "#plt.xlim([0,10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myMSMs[3].mfpt(10,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for state in range(212):\n",
+    "    s1 = state\n",
+    "    s2 = 1\n",
+    "    #print(mymsm.mfpt(s1,s2), mymsm2.mfpt(s1,s2), mymsm3.mfpt(s1,s2), mymsm4.mfpt(s1,s2))\n",
+    "    if (s1 != s2):\n",
+    "        try:\n",
+    "            mfpts = []\n",
+    "            for i in range(numMSMs):\n",
+    "                mfpts.append(myMSMs[i].mfpt(s1,s2))\n",
+    "            plt.plot(np.log(mfpts))\n",
+    "        except: \n",
+    "            continue\n",
+    "\n",
+    "            \n",
+    "plt.xlim([0,9])\n",
+    "#plt.ylim([9,10])\n",
+    "#plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mytpt = pyemma.msm.tpt(mymsm,[s1],[s2])\n",
+    "mytpt2 = pyemma.msm.tpt(mymsm2,[s1],[s2])\n",
+    "mytpt3 = pyemma.msm.tpt(mymsm3,[s1],[s2])\n",
+    "mytpt4 = pyemma.msm.tpt(mymsm4,[s1],[s2])\n",
+    "\n",
+    "print(mytpt.mfpt, mytpt2.mfpt, mytpt3.mfpt, mytpt4.mfpt)"
    ]
   },
   {
