Fixing boxBoundary bug
...in process

--- a/examples/testMSMRDintegrator.ipynb
+++ b/examples/testMSMRDintegrator.ipynb
@@ -128,9 +128,10 @@
     "seed = 0 # Seed = -1 used random device as seed\n",
     "bodytype = 'rigidbody'\n",
     "integrator = msmrdIntegrator(dt, seed, bodytype, numParticleTypes, relativeDistanceCutOff, unboundMSM, couplingMSM)\n",
-    "#boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'periodic')\n",
-    "#noBoundary = msmrd2.noBoundary()\n",
-    "#integrator.setBoundary(noBoundary)"
+    "boundary = msmrd2.box(boxsize,boxsize,boxsize,'periodic')\n",
+    "#boundary = msmrd2.sphere(boxsize,'reflective')\n",
+    "#boundary = msmrd2.noBoundary()\n",
+    "integrator.setBoundary(boundary)"
    ]
   },
   {
@@ -159,13 +160,6 @@
    "source": [
     "partList[0].position, partList[1].position"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
