Fixed msmrdIntegrator sneaky bug

--- a/examples/testMSMRDintegrator.ipynb
+++ b/examples/testMSMRDintegrator.ipynb
@@ -24,7 +24,7 @@
     "numBoundStates = 2\n",
     "maxNumBoundStates = 10\n",
     "numTransitionsStates = 203\n",
-    "relativeDistanceCutOff = 2.2\n",
+    "relativeDistanceCutOff = 0.5\n",
     "numParticleTypes = 1 # num. of particle types (not states) in unbound state\n",
     "boxsize = 2\n",
     "\n",
@@ -103,15 +103,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define particle list\n",
+    "# Define particle list (make sure all particles are inside box)\n",
     "ptype = 0\n",
     "pstate = 0\n",
     "D = Dlist[pstate]\n",
     "Drot = Drotlist[pstate]\n",
     "position = np.array([1,1,1])\n",
     "orientation = np.array([1,0,0,0])\n",
-    "part1 = msmrd2.particleMS(ptype, pstate, D, Drot, position, orientation)\n",
-    "part2 = msmrd2.particleMS(ptype, pstate, D, Drot, -1.0*position, orientation)\n",
+    "part1 = msmrd2.particleMS(ptype, pstate, D, Drot, 0.1*position, orientation)\n",
+    "part2 = msmrd2.particleMS(ptype, pstate, D, Drot, -0.1*position, orientation)\n",
     "part1.deactivateMSM()\n",
     "part2.deactivateMSM()\n",
     "partList = msmrd2.integrators.particleMSList([part1, part2])"
@@ -159,6 +159,24 @@
    "outputs": [],
    "source": [
     "partList[0].position, partList[1].position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "relpos = partList[1].position - partList[0].position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.linalg.norm(relpos)"
    ]
   },
   {
