Implemented pickle for loading ratedictionary

--- a/examples/testMSMRDintegrator.ipynb
+++ b/examples/testMSMRDintegrator.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
     "import numpy as np\n",
     "import msmrd2\n",
     "import msmrd2.analysis as msmrdals\n",
@@ -24,18 +25,15 @@
     "numBoundStates = 2\n",
     "maxNumBoundStates = 10\n",
     "numTransitionsStates = 203\n",
-    "relativeDistanceCutOff = 0.5\n",
+    "relativeDistanceCutOff = 2.2\n",
     "numParticleTypes = 1 # num. of particle types (not states) in unbound state\n",
-    "boxsize = 2\n",
+    "boxsize = 6\n",
     "\n",
-    "# For loading trajectories\n",
+    "# Trajectory relevant parameters\n",
     "dt = 0.000001\n",
     "timesteps = 4000000 # 2000000\n",
     "stride = 25 #2500\n",
-    "maxentries = int(timesteps/stride)\n",
-    "#fnamebase = '../data/dimer/old/simDimer'\n",
-    "fnamebase = '../data/dimer/simDimer_t4.00E+06_s25_'\n",
-    "nfiles = 3 #200"
+    "maxentries = int(timesteps/stride)"
    ]
   },
   {
@@ -44,25 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load discrete trajectories\n",
-    "dtrajs = []\n",
-    "for i in range(nfiles):\n",
-    "    dtraj = msmrdals.loadDiscreteTrajectory(fnamebase, i)\n",
-    "    dtrajs.append(dtraj)    \n",
-    "    print(\"File \", i+1, \" of \", nfiles, \" done.\", end=\"\\r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Slice and stitch trajectories build MSM and extract rates\n",
-    "lagtime = 200\n",
-    "stitching = True\n",
-    "fullDictionary = False # Only rates to and from bound states.\n",
-    "rateDictionary = msmrdals.extractRatesMSM(dtrajs, lagtime, numBoundStates, stitching, fullDictionary)"
+    "# Load pickled rateDicitionary generated in generateRateDictionary\n",
+    "pickle_in = open(\"data/ratedictionary_dimer.pickle\",\"rb\")\n",
+    "rateDictionary = pickle.load(pickle_in)"
    ]
   },
   {
@@ -140,7 +122,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "partList[0].position, partList[1].position"
+    "print(partList[0].position, partList[1].position, \n",
+    "      partList[0].state, partList[1].state, \n",
+    "      partList[0].boundTo, partList[1].boundTo)"
    ]
   },
   {
@@ -149,7 +133,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "integrator.integrate(partList)"
+    "for i in range(200000):\n",
+    "    integrator.integrate(partList)\n",
+    "    if (partList[0].boundTo != -1):\n",
+    "        print(partList[0].position, partList[1].position, \n",
+    "      partList[0].state, partList[1].state, \n",
+    "      partList[0].boundTo, partList[1].boundTo)\n",
+    "    #print(partList[0].state, partList[1].state)"
    ]
   },
   {
@@ -158,7 +148,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "partList[0].position, partList[1].position"
+    "print(partList[0].position, partList[1].position, \n",
+    "      partList[0].state, partList[1].state, \n",
+    "      partList[0].boundTo, partList[1].boundTo)"
    ]
   },
   {
@@ -167,16 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "relpos = partList[1].position - partList[0].position"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.linalg.norm(relpos)"
+    "rateDictionary"
    ]
   },
   {
