Testing and improvement of msmrdIntegrtator

--- a/examples/testMSMRDintegrator.ipynb
+++ b/examples/testMSMRDintegrator.ipynb
@@ -30,7 +30,7 @@
     "boxsize = 6\n",
     "\n",
     "# Trajectory relevant parameters\n",
-    "dt = 0.000001\n",
+    "dt = 0.001\n",
     "timesteps = 4000000 # 2000000\n",
     "stride = 25 #2500\n",
     "maxentries = int(timesteps/stride)"
@@ -124,7 +124,8 @@
    "source": [
     "print(partList[0].position, partList[1].position, \n",
     "      partList[0].state, partList[1].state, \n",
-    "      partList[0].boundTo, partList[1].boundTo)"
+    "      partList[0].boundTo, partList[1].boundTo)\n",
+    "prevstate = 0"
    ]
   },
   {
@@ -133,13 +134,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(200000):\n",
+    "for i in range(20000000):\n",
     "    integrator.integrate(partList)\n",
-    "    if (partList[0].boundTo != -1):\n",
+    "    if (partList[0].state != prevstate):\n",
     "        print(partList[0].position, partList[1].position, \n",
     "      partList[0].state, partList[1].state, \n",
     "      partList[0].boundTo, partList[1].boundTo)\n",
-    "    #print(partList[0].state, partList[1].state)"
+    "        prevstate = partList[0].state"
    ]
   },
   {
