Major improvement to eventManager class

--- a/examples/testMSMRDintegrator.ipynb
+++ b/examples/testMSMRDintegrator.ipynb
@@ -9,7 +9,6 @@
     "import pickle\n",
     "import numpy as np\n",
     "import msmrd2\n",
-    "import msmrd2.analysis as msmrdals\n",
     "from msmrd2.markovModels import continuousTimeMarkovStateModel as ctmsm\n",
     "from msmrd2.markovModels import msmrdMarkovStateModel as msmrdMSM\n",
     "from msmrd2.integrators import msmrdIntegrator "
@@ -29,8 +28,11 @@
     "numParticleTypes = 1 # num. of particle types (not states) in unbound state\n",
     "boxsize = 6\n",
     "\n",
-    "# Trajectory relevant parameters\n",
-    "dt = 0.001\n",
+    "# Trajectory relevant parameters (Need to be equal to the one used to generate the rateDictionary)\n",
+    "dt = 0.00001\n",
+    "lagtime = 200 \n",
+    "effectiveLagtime = dt*lagtime\n",
+    "# Other trajectory parameters for reference.\n",
     "timesteps = 4000000 # 2000000\n",
     "stride = 25 #2500\n",
     "maxentries = int(timesteps/stride)"
@@ -74,7 +76,7 @@
     "seed = 0\n",
     "Dbound = [0.5, 0.5]\n",
     "DboundRot = [1.0, 1.0]\n",
-    "couplingMSM = msmrdMSM(numBoundStates, numTransitionsStates, seed, rateDictionary) \n",
+    "couplingMSM = msmrdMSM(effectiveLagtime, numBoundStates, numTransitionsStates, seed, rateDictionary) \n",
     "couplingMSM.setDbound(Dbound, DboundRot)\n",
     "couplingMSM.setmaxNumberBoundStates(maxNumBoundStates)"
    ]
@@ -106,7 +108,7 @@
    "outputs": [],
    "source": [
     "# MSM/RD integrator definition\n",
-    "dt = 0.05 # should be smaller than Gillespie inverse transition rates\n",
+    "dt = 0.002 # should be smaller than Gillespie inverse transition rates\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "bodytype = 'rigidbody'\n",
     "integrator = msmrdIntegrator(dt, seed, bodytype, numParticleTypes, relativeDistanceCutOff, unboundMSM, couplingMSM)\n",
@@ -125,7 +127,7 @@
     "print(partList[0].position, partList[1].position, \n",
     "      partList[0].state, partList[1].state, \n",
     "      partList[0].boundTo, partList[1].boundTo)\n",
-    "prevstate = 0"
+    "prevstate = 1"
    ]
   },
   {
@@ -134,13 +136,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(20000000):\n",
+    "for i in range(2000):\n",
     "    integrator.integrate(partList)\n",
-    "    if (partList[0].state != prevstate):\n",
-    "        print(partList[0].position, partList[1].position, \n",
+    "    #if (partList[0].state != prevstate):\n",
+    "    print(partList[0].position, partList[1].position, \n",
     "      partList[0].state, partList[1].state, \n",
     "      partList[0].boundTo, partList[1].boundTo)\n",
-    "        prevstate = partList[0].state"
+    "        #prevstate = partList[0].state"
    ]
   },
   {
@@ -161,6 +163,24 @@
    "outputs": [],
    "source": [
     "rateDictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "couplingMSM.computeTransition2BoundState(180)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "couplingMSM.computeTransition2UnboundState(2)"
    ]
   },
   {
