msmrdIntegrator WORKINGgit add -u
ready to start testing in simplest possible system

--- a/examples/testMSMRDintegrator.ipynb
+++ b/examples/testMSMRDintegrator.ipynb
@@ -23,10 +23,16 @@
     "# Main parameters\n",
     "numBoundStates = 2\n",
     "maxNumBoundStates = 10\n",
-    "numTransitionsStates = 203\n",
     "relativeDistanceCutOff = 2.2\n",
     "numParticleTypes = 1 # num. of particle types (not states) in unbound state\n",
     "boxsize = 6\n",
+    "\n",
+    "# Discretization parameters (need to be consistent with those of integrator\n",
+    "numSphericalSectionsPos = 7\n",
+    "numRadialSectionsQuat = 5\n",
+    "numSphericalSectionsQuat = 7\n",
+    "totalnumSecsQuat = numSphericalSectionsQuat*(numRadialSectionsQuat -1) + 1\n",
+    "numTransitionsStates = numSphericalSectionsPos * totalnumSecsQuat #203 \n",
     "\n",
     "# Trajectory relevant parameters (Need to be equal to the one used to generate the rateDictionary)\n",
     "dt = 0.00001\n",
@@ -136,13 +142,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(2000):\n",
+    "for i in range(20000):\n",
     "    integrator.integrate(partList)\n",
-    "    #if (partList[0].state != prevstate):\n",
-    "    print(partList[0].position, partList[1].position, \n",
+    "    if (partList[0].state != prevstate):\n",
+    "        print(partList[0].position, partList[1].position, \n",
     "      partList[0].state, partList[1].state, \n",
     "      partList[0].boundTo, partList[1].boundTo)\n",
-    "        #prevstate = partList[0].state"
+    "        prevstate = partList[0].state"
    ]
   },
   {
