Binding for setDiscretization added

--- a/examples/testMSMRDintegrator.ipynb
+++ b/examples/testMSMRDintegrator.ipynb
@@ -117,11 +117,23 @@
     "dt = 0.002 # should be smaller than Gillespie inverse transition rates\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "bodytype = 'rigidbody'\n",
-    "integrator = msmrdIntegrator(dt, seed, bodytype, numParticleTypes, relativeDistanceCutOff, unboundMSM, couplingMSM)\n",
+    "integrator = msmrdIntegrator(dt, seed, bodytype, numParticleTypes, relativeDistanceCutOff, unboundMSM, couplingMSM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set boundary and discretization in integrator (optional since default values also work)\n",
     "boundary = msmrd2.box(boxsize,boxsize,boxsize,'periodic')\n",
     "#boundary = msmrd2.sphere(boxsize,'reflective')\n",
     "#boundary = msmrd2.noBoundary()\n",
-    "integrator.setBoundary(boundary)"
+    "integrator.setBoundary(boundary)\n",
+    "discretization = msmrd2.discretizations.positionOrientationPartition(relativeDistanceCutOff, numSphericalSectionsPos,\n",
+    "                                                                    numRadialSectionsQuat, numSphericalSectionsQuat)\n",
+    "integrator.setDiscretization(discretization)"
    ]
   },
   {
@@ -145,9 +157,8 @@
     "for i in range(20000):\n",
     "    integrator.integrate(partList)\n",
     "    if (partList[0].state != prevstate):\n",
-    "        print(partList[0].position, partList[1].position, \n",
-    "      partList[0].state, partList[1].state, \n",
-    "      partList[0].boundTo, partList[1].boundTo)\n",
+    "        print(\"{:.4f}\".format(integrator.clock), partList[0].state, partList[1].state)\n",
+    "        #print(partList[0].position, partList[1].position, partList[0].state, partList[1].state, partList[0].boundTo, partList[1].boundTo)\n",
     "        prevstate = partList[0].state"
    ]
   },
