--- a/examples/testMSMRDintegrator.ipynb
+++ b/examples/testMSMRDintegrator.ipynb
@@ -133,7 +133,8 @@
     "integrator.setBoundary(boundary)\n",
     "discretization = msmrd2.discretizations.positionOrientationPartition(relativeDistanceCutOff, numSphericalSectionsPos,\n",
     "                                                                    numRadialSectionsQuat, numSphericalSectionsQuat)\n",
-    "integrator.setDiscretization(discretization)"
+    "integrator.setDiscretization(discretization)        include/trajectories/discrete/patchyDimer.hpp\n",
+    "        include/trajectories/discrete/patchyProtein.hpp"
    ]
   },
   {
@@ -199,13 +200,6 @@
    "source": [
     "couplingMSM.computeTransition2UnboundState(2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
