--- a/examples/benchmark/patchyDimerFPTs.ipynb
+++ b/examples/benchmark/patchyDimerFPTs.ipynb
@@ -121,7 +121,7 @@
     "        boundState = traj.getBoundState(partlist[0], partlist[1])\n",
     "        #end = timeit.timeit()\n",
     "        #print(end - start)\n",
-    "        if ( (boundState == 2)):\n",
+    "        if ( (boundState >= 1) and (boundState <= 8)):\n",
     "            #datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
     "            print(integrator.clock, boundState)\n",
     "            print(partlist[0].position, partlist[0].orientation)\n",
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datafile  = open('../data/vmd/tests/dimerStates.xyz', 'w')\n",
+    "datafile  = open('../../data/vmd/tests/dimerStates.xyz', 'w')\n",
     "datafile.write(str(3*len(partlist)) + '\\n')\n",
     "datafile.write(str(0) + '\\n')\n",
     "for j, part in enumerate(partlist):\n",
@@ -206,7 +206,7 @@
     "    datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
     "msmrdvis.generateTCL_patchyParticles(numparticles = numparticles, \n",
     "                                     outfname = \"dimerStates\", \n",
-    "                                     tclfname = \"../data/vmd/tests/dimerStates2vmd.tcl\")"
+    "                                     tclfname = \"../../data/vmd/tests/dimerStates2vmd.tcl\")"
    ]
   },
   {
